Added More On Clean Architectures

--- a/Architecture Fundamentals/2. Clean Architecture.md
+++ b/Architecture Fundamentals/2. Clean Architecture.md
@@ -3,11 +3,179 @@ Clean Architecture separates your app into layers with strict dependency rules.
 - Inner layers should never depend on outer layers.
 - Business logic should not depend on frameworks (Android SDK, Retrofit, Room, etc.).
 
+The 3 Goals of Clean Architecture:
+- Scalability - How easy is it to add new features?
+- Readability - How easy is it to understand existing code?
+- Testability - How easy is it to test the code?
+
 ### Layers of Clean Architecture
 Clean Architecture has three main layers in Android:
-#### 1. Presentation Layer (UI Layer)
+#### 1. Domain Layer (The Heart or Heart of the App)
+- It contains the business logic that will remain the same even if UI, DB, or API changes.
+- It describes what should happen, not how it should happen.
+- It contains pure Kotlin. No Android Framework.
+- This layer makes it easy for other developers to understand what the app does and what problem it solves.
+- Less likely to change lives inside the domain layer.
+	```
+	interface NotesRepository {
+	    fun getNotes(): Flow<List<Note>>
+	    suspend fun addNote(note: Note)
+	    suspend fun syncNotes()
+	}
+	```
+- ##### Why is the domain the innermost layer?
+	- This layer requires fewer changes.
+	- Frequently changing parts should not require changes in the less frequently changing parts of the app.
+	- Implementation details usually change more often than core application logic.
+- ##### Models:
+	- Models encapsulate the most fundamental business rules of the app
+	- Among the least likely parts to change
+	- Very reusable
+- ##### Gateway / Repository Abstraction
+	- Gateways are an abstraction that hides implementation details.
+	- Repositories are commonly used on Android and can be considered a gateway
+	- Repository definition lives in the domain.
+		```
+		package domain.repository
+		
+		import domain.entity.AuthResult
+		
+		interface AuthRepository {
+		
+		    suspend fun login(email: String, password: String): AuthResult
+		
+		    suspend fun register(name: String, email: String, password: String): AuthResult
+		
+		    suspend fun logout(): Boolean
+		}
+		```
+- ##### Use Cases
+	- Use cases contain pure business logic.
+	- Each use case only exposes one public function
+	- Highly reusable
+	- Class name clearly reveals what's inside
+	- Example 1:
+		```
+		package domain.usecase
+		
+		import domain.repository.AuthRepository
+		
+		class LoginUseCase(
+		    private val authRepository: AuthRepository
+		) {
+		    suspend operator fun invoke(email: String, password: String) =
+		        authRepository.login(email, password)
+		}
+		```
+	- Example 2:
+		```
+		class CalculateDiscountUseCase(
+		    private val repository: ProductRepository
+		) {
+		    suspend operator fun invoke(productId: String): DiscountResult {
+		        val product = repository.getProductById(productId)
+		
+		        val discountAmount = product.price * (product.discountPercent / 100)
+		        val finalPrice = product.price - discountAmount
+		
+		        return DiscountResult(
+		            originalPrice = product.price,
+		            discountPercent = product.discountPercent,
+		            discountAmount = discountAmount,
+		            finalPrice = finalPrice
+		        )
+		    }
+		}
+		
+		data class DiscountResult(
+		    val originalPrice: Double,
+		    val discountPercent: Double,
+		    val discountAmount: Double,
+		    val finalPrice: Double
+		)
+		```
+
+#### 2. Data Layer (Implementation Layer)
+- It describes how things happen.
+- This layer implements the interfaces defined in the Domain layer.
+- The data layer is the bridge to external data sources.
+- Common data sources include local databases, remote APIs, or the file system. Data sources can be of different natures, like GPS Provider, Sensors, Bluetooth, etc.
+- It has communication outside the world. Outside the world means not part of your app, for example, Remote API, Database, etc.
+- It can contain the Android Framework.
+- Decide _where_ data comes from (DB, network, cache, etc.)
+- When Implementation details change, only the data layer needs to change. This is possible because of the Domain layer.
+	```
+	package data.repository
+	
+	import data.mapper.toDomain
+	import data.remote.AuthApi
+	import data.remote.model.LoginRequestDto
+	import data.remote.model.RegisterRequestDto
+	import domain.entity.AuthResult
+	import domain.entity.User
+	import domain.repository.AuthRepository
+	
+	class AuthRepositoryImpl(
+	    private val api: AuthApi
+	) : AuthRepository {
+	
+	    override suspend fun login(email: String, password: String): AuthResult {
+	        /// Implementation here
+	    }
+	
+	    override suspend fun register(name: String, email: String, password: String): AuthResult {
+	         /// Implementation here
+	    }
+	
+	    override suspend fun logout(): Boolean {
+	         /// Implementation here
+	    }
+	}
+	```
+
+- ##### Data Models - DTOs
+	- DTO = Data Transfer Object
+	- Most likely the direct result of a JSON object
+		```
+		package data.remote.model
+		
+		data class UserDto(
+		    val id: String,
+		    val name: String,
+		    val email: String
+		)
+		```
+
+- ##### Data Models - DB Entities
+	- These data models are used for data storage for the local database
+		```
+		package data.remote.model
+		
+		@Entity
+		data class User(
+			@PrimaryKey
+		    val id: String,
+		    val name: String,
+		    val email: String
+		)
+		```
+
+- ##### Mappers
+	- Its main purpose is to convert external data or raw data into clean domain models.
+	- It converts the data layer models (DTOs, Entities) into Domain Layer models.
+	- With the help of mappers, it makes the domain layer not depend on the data layer. The domain layer cannot import DTOs of data layer. Whereas the Data layer can import models of the domain layer.
+	- It fulfils the defined dependency between the domain and data layer.
+		```
+		fun UserDto.toDomain() = User(
+		    id = user_id,
+		    name = full_name,
+		    email = email_address
+		)
+		```
+
+#### 3. Presentation Layer (UI Layer)
 - This is the part of the app the user sees. 
-- It contains UI code, ViewModel, and state handling or state management.
+- It contains UI code, ViewModel, Navigation logic and state handling or state management.
 - It only interacts with the **Domain Layer** through **Use Cases**
 - Does not know anything about the **Data Layer** (repositories, Room, Retrofit, etc.)
 - It is a misconception that MVVM is applied to the whole app. Instead, it only applies to this layer.
@@ -32,26 +200,6 @@ class NotesViewModel(
 }
 ```
 
-#### 2. Domain Layer (The Heart of the App)
-- It contains the business logic that will remain the same even if UI, DB, or API changes.
-- It describes what should happen, not how it should happen.
-- It contains pure Kotlin. No Android Framework.
-```
-interface NotesRepository {
-    fun getNotes(): Flow<List<Note>>
-    suspend fun addNote(note: Note)
-    suspend fun syncNotes()
-}
-```
-
-
-#### 3. Data Layer (Implementation Layer)
-- It describes how things happen.
-- This layer implements the interfaces defined in the Domain layer.
-- It has communication outside the world. Outside the world means not part of your app, for example, Remote API, Database, etc.
-- It can contain the Android Framework.
-- Decide _where_ data comes from (DB, network, cache, etc.)
-- Mappers (convert data models → domain models)
 
 ### Difference between Domain Layer and Data Layer
 - The Domain Layer outlines what the app is capable of doing. For example, my app has a login and registration function
@@ -91,6 +239,12 @@ Data Layer → Repository → UseCase → ViewModel → UI
 ```
 
 ### Why Clean Architecture is powerful
-- Easy to test
-- Easy to make changes. If there are changes related to the network api or local database, only the data layer is changed.
-- Promote scalability. If new features come in, no need to make a lot of changes. 
+- ###### Scalability:
+	- Changes in the data or presentation layer won't affect the core of the app
+	- Clear rules on where to add new features and easy to find components.
+	- Easy to make changes. If there are changes related to the network api or local database, only the data layer is changed.
+- ##### Testability:
+	- Logic is isolated to allow easy testing
+	- Predictable data flow
+- ##### Readability:
+	- Easy for other developers to understand the core features of the app by only reviewing the Domain layer.
