Added More on Architecture Fundamentals

--- a/Architecture Fundamentals/3. Clean Architecture.md
+++ b/Architecture Fundamentals/3. Clean Architecture.md
@@ -1,4 +1,3 @@
-
 Clean Architecture separates your app into layers with strict dependency rules.
 - Inner layers should never depend on outer layers.
 - Business logic should not depend on frameworks (Android SDK, Retrofit, Room, etc.).
@@ -8,9 +7,10 @@ The 3 Goals of Clean Architecture:
 - Readability - How easy is it to understand existing code?
 - Testability - How easy is it to test the code?
 
+****
 ### Layers of Clean Architecture
 Clean Architecture has three main layers in Android:
-#### 1. Domain Layer (The Heart or Heart of the App)
+#### 1. Domain Layer (The Heart of the App)
 - It contains the business logic that will remain the same even if UI, DB, or API changes.
 - It describes what should happen, not how it should happen.
 - It contains pure Kotlin. No Android Framework.
@@ -102,7 +102,7 @@ Clean Architecture has three main layers in Android:
 - Common data sources include local databases, remote APIs, or the file system. Data sources can be of different natures, like GPS Provider, Sensors, Bluetooth, etc.
 - It has communication outside the world. Outside the world means not part of your app, for example, Remote API, Database, etc.
 - It can contain the Android Framework.
-- Decide _where_ data comes from (DB, network, cache, etc.)
+- Decide where data comes from (DB, network, cache, etc.)
 - When Implementation details change, only the data layer needs to change. This is possible because of the Domain layer.
 	```
 	package data.repository
@@ -175,7 +175,7 @@ Clean Architecture has three main layers in Android:
 
 #### 3. Presentation Layer (UI Layer)
 - This is the part of the app the user sees. 
-- It contains UI code, ViewModel, Navigation logic and state handling or state management.
+- It contains UI code, ViewModel, Navigation logic, and state management.
 - It only interacts with the **Domain Layer** through **Use Cases**
 - Does not know anything about the **Data Layer** (repositories, Room, Retrofit, etc.)
 - It is a misconception that MVVM is applied to the whole app. Instead, it only applies to this layer.
@@ -200,17 +200,20 @@ class NotesViewModel(
 }
 ```
 
-
+****
 ### Difference between Domain Layer and Data Layer
 - The Domain Layer outlines what the app is capable of doing. For example, my app has a login and registration function
 - The Data Layer outlines the implementation details of the Domain layer. For example, how login and registration work. What kind of network library is your app using?
+- Domain layer outlines the problems. The Data layers provide the solutions to the problems.
 
+****
 ### Dependencies between Layers
 - Presentation and data layers are allowed to have dependencies on the domain layer.
 - The domain layer is isolated. It doesn't have a dependency on either the presentation layer or the data layer.
 - The domain layer does not know the implementation of the presentation layer or the data layer.
 - Presentation layer can't have dependencies on the data layer or vice versa.
 
+****
 ### How Data Flows in Clean Architecture
 #### UI → ViewModel → Use Case → Repository → Data Sources → Repository → Use Case → ViewModel → UI
 
@@ -238,13 +241,30 @@ Data returns
 Data Layer → Repository → UseCase → ViewModel → UI
 ```
 
+****
 ### Why Clean Architecture is powerful
-- ###### Scalability:
+- ##### Scalability:
 	- Changes in the data or presentation layer won't affect the core of the app
-	- Clear rules on where to add new features and easy to find components.
+	- Clear rules on where to add new features and easy-to-find components.
 	- Easy to make changes. If there are changes related to the network api or local database, only the data layer is changed.
 - ##### Testability:
 	- Logic is isolated to allow easy testing
 	- Predictable data flow
 - ##### Readability:
 	- Easy for other developers to understand the core features of the app by only reviewing the Domain layer.
+
+****
+### Where do Android components or platform-specific components go in Clean Architecture?
+- In clean architecture, there are two options to put Android components like WorkManager, Foreground Services, Job schedulers, Notifications, Permissions handling, Navigation, compose UI, Location tracking, BroadcastReceivers, or ViewModels, etc. The following are the options:
+	- Presentation Layer
+	- Platform Layer
+- Domain and Data layers should not know about platform-specific components
+-  Presentation Layer is the preferred place to put platform-specific components, as the Platform Layer requires creating a new layer. By creating another new layer, the architecture becomes more complex.
+
+****
+### Why Android components must stay in the Framework/Platform Layer?
+- They depend on the Android SDK. Domain and Data must remain **pure Kotlin**, testable, and platform-agnostic.
+- They are lifecycle-aware. WorkManager, Service, and Location APIs require context or an Android environment.
+- They interact with the OS. 
+
+****
