Added More on MVI

--- a/Architecture Fundamentals/5. Architectural Patterns.md
+++ b/Architecture Fundamentals/5. Architectural Patterns.md
@@ -23,10 +23,10 @@ User → View → Controller → Model
 - Faster development for small apps
 
 ##### Disadvantages of MVC
-- tight coupling or connection between View and Controller
+- Tight coupling or connection between View and Controller
 - Difficult to test UI logic
 - Not ideal for large-scale Android apps
-
+- 
 ##### Example
 Note: In Android, **Activities/Fragments often act as both View and Controller**, which breaks pure MVC.
 ```
@@ -123,7 +123,12 @@ class LoginActivity : AppCompatActivity(), LoginView {
 
 ### 3. MVVM - Model View ViewModel
 - MVVM introduces ViewModel, which exposes observable state.
+- With MVVM, we can do reactive programming.
+- It introduces observable states.
+- When observable states change, the UI automatically renders.
 - It focuses on separation of concerns, testability, and UI state management
+- It supports two-way binding
+- MVVM is not unidirectional by default, but we can make MVVM support unidirectional data flow 
 
 ##### MVVM Components
 **Model**
@@ -205,7 +210,11 @@ fun LoginScreen(vm: LoginViewModel) {
 
 ### 4. MVI - Model View Intent (Unidirectional Data Flow)
 - MVI is a **unidirectional architecture pattern** mainly used for **state-driven UIs**, especially in **Android (Jetpack Compose)**.
+- MVI is preferably used for declarative UI.
 - Data flows in one direction only.
+- ViewModel still exists in MVI.
+- In MVI, it encapsulates all the states, actions, and events in a separate class and makes them immutable members of the class. 
+- Whenever there is a change in state, a new instance of the class is returned.
 	```
 	User Action → Intent → Reducer → New State → View
 	```
@@ -233,29 +242,40 @@ fun LoginScreen(
 - Immutable
 - Describes **what happened**, not how to handle it
 ```
-sealed class LoginIntent {
+sealed class LoginScreemAction {
     object LoginClicked : LoginIntent()
     data class EmailChanged(val value: String) : LoginIntent()
 }
 ```
 
 **Model**
-- Represents the **entire UI state**
-- Single source of truth
-```
-data class LoginState(
-    val email: String = "",
-    val isLoading: Boolean = false,
-    val error: String? = null
-)
-```
+- The model is the same as the model in the MVVM pattern.
 
 **Reducer (Core of MVI)**
-- A **pure function**
-- Takes **current state + intent**
-- Returns a **new state**
+- A pure function that takes (oldState + Intent) and returns newState
 - Must not call APIs directly
-- Must not mutate state
+- It is implicitly done. No need for an explicit function or a file.
+- Reducer is often merged into the ViewModel
+	- Most Android teams do this:
+		```
+		private fun setLoading() {
+		    _state.update { it.copy(isLoading = true) }
+		}
+		
+		private fun setSuccess(data: Data) {
+		    _state.update { it.copy(isLoading = false, data = data) }
+		}
+		```
+	- These functions **ARE reducers**
+	- Just not in a separate file
+
+**Example - Implicitly**
+You are already reducing state, just _inline_.
+```
+_state.value = _state.value.copy(isLoading = true)
+```
+
+**Example - Explicitly**
 ```
 fun reduce(
     state: LoginState,
@@ -272,7 +292,7 @@ fun reduce(
 ```
 
 **ViewModel (Or Store)**
-- It manages intent, reducer, and side effects.
+- It manages the states and intents
 ```
 class LoginViewModel : ViewModel() {
 
@@ -289,23 +309,9 @@ class LoginViewModel : ViewModel() {
     }
 
     private fun login() {
-        // side effect (API call)
+        // API call
     }
 }
-```
-
-**Side Effects in MVI**
-- It manages the API calls, database, navigation, and toasts.
-```
-sealed class LoginEffect {
-    object NavigateHome : LoginEffect()
-    data class ShowError(val message: String) : LoginEffect()
-}
-```
-
-```
-private val _effect = Channel<LoginEffect>()
-val effect = _effect.receiveAsFlow()
 ```
 
 ##### Data Flow
@@ -344,8 +350,85 @@ val effect = _effect.receiveAsFlow()
 - Overkill for simple screens
 
 ##### Example
+**Intent (User Actions)**
+```
+sealed interface LoginIntent {
+    data class Submit(val username: String) : LoginIntent
+}
+```
 
-##### MVI vs MVVM
+**UI State (Single source of truth)**
+```
+data class LoginUiState(
+    val isLoading: Boolean = false,
+    val isSuccess: Boolean = false,
+    val error: String? = null
+)
+```
+
+**ViewModel**
+```
+class LoginViewModel : ViewModel() {
+
+    private val _state = MutableStateFlow(LoginUiState())
+    val state: StateFlow<LoginUiState> = _state
+
+    fun onIntent(intent: LoginIntent) {
+        when (intent) {
+            is LoginIntent.Submit -> login(intent.username)
+        }
+    }
+
+    private fun login(username: String) {
+        _state.value = _state.value.copy(isLoading = true)
+
+        viewModelScope.launch {
+            delay(1000) // simulate API call
+
+            if (username == "admin") {
+                _state.value = LoginUiState(isSuccess = true)
+            } else {
+                _state.value = LoginUiState(error = "Invalid username")
+            }
+        }
+    }
+}
+```
+
+**View**
+```
+@Composable
+fun LoginScreen(vm: LoginViewModel) {
+
+    val state by vm.state.collectAsState()
+
+    Column {
+        Button(
+            onClick = {
+                vm.onIntent(LoginIntent.Submit("admin"))
+            }
+        ) {
+            Text("Login")
+        }
+
+        when {
+            state.isLoading -> {
+                Text("Loading...")
+            }
+            state.isSuccess -> {
+                Text("Login Success")
+            }
+            state.error != null -> {
+                Text(state.error!!)
+            }
+        }
+    }
+}
+```
+
+****
+
+#### MVI vs MVVM
 | Aspect         | MVVM              | MVI             |
 | -------------- | ----------------- | --------------- |
 | Data flow      | Two-way possible  | One-way only    |
@@ -379,5 +462,13 @@ val effect = _effect.receiveAsFlow()
 ##### Conclusion:
 For modern Android development, **MVVM is the most balanced and recommended architecture**.  
 For applications with complex UI states and unidirectional data flow requirements, **MVI** provides better predictability and debugging capabilities.
+
+****
+
+### Clean Architecture vs Architectural Patterns
+- Clean architecture is applied to the whole app, where the app is divided into different layers. 
+- Architectural patterns are also known as Presentational Patterns. Architectural patterns are only applied in the Presentation layer it does not applied to the whole app.
+- In clean architecture, the Model is the part of the domain layer.
+- If there is no domain layer, then the Model will be a part of presentation layer MVVM or MVI.
 
 ****
